--- a/src/components/BannerSection/BannerSection.module.css
+++ b/src/components/BannerSection/BannerSection.module.css
@@ -1,7 +1,46 @@
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .banContainer {
-  background-color: #888;
+	background-color: #888;
+	width: 100%;
+	height: 546px;
+}
+
+.movieContainer {
+}
+
+.movieImage {
+	object-fit: fill;
+	width: 100%;
+	height: 100%;
+}
+
+.movieName {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 100px;
+	padding-left: 20px;
+	padding-right: 184px;
+	background: -webkit-linear-gradient(
+		bottom,
+		#000000 0%,
+		rgba(0, 0, 0, 0) 100%
+	);
+	background: linear-gradient(360deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 100px;
+	color: #f5f5f5;
+	white-space: nowrap;
+	overflow: hidden;
+	-ms-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+}
+
+.movieSlide {
+  height: 100%;
+  width: 100%;
 }
