--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,28 @@ body {
 	background-color: #191a1f;
   color: white;
 }
+
+/* Custom Swiper pagination & navigation */
+.swiper-pagination-bullet-active {
+  width: 24px;
+  border-radius: 6px;
+  background-color: #f5f5f5;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  -webkit-box-flex: 0;
+  -webkit-flex-grow: 0;
+  -ms-flex-positive: 0;
+  flex-grow: 0;
+  margin: 0 5px;
+  opacity: 1;
+}
+
+.swiper-button-prev, .swiper-button-next {
+  color: #f5f5f5;
+}
+
+.lazy-load-image-background {
+  height: 100%;
+  width: 100%;
+}
