--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,39 +1,51 @@
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 button {
-  outline: none;
-  border: none;
+	outline: none;
+	border: none;
 }
 
 .gradientText {
 	text-transform: uppercase;
-	background: linear-gradient(to right, #e22838 0%, #30CFD0 100%);
+	background: linear-gradient(to right, #e22838 0%, #30cfd0 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
 
 .navContainer {
-  display: flex;
+	display: flex;
 	padding: 28px;
 	align-items: center;
 	width: 100%;
 	height: 26px;
+	position: fixed;
+	top: 0;
+	z-index: 9999;
+  display: flex;
+  padding: 28px;
+  align-items: center;
+  width: 100%;
+  height: 26px;
   position: fixed;
   top: 0;
   z-index: 9999;
+  background-image: linear-gradient( 
+180deg
+, #0f0f0ea6 0%, rgba(15, 15, 15, 0) 87% );
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 
 .navContainer a {
-  color: #fff;
+	color: #fff;
 }
 
 .navLogo {
-  display: flex;
-  align-items: center;
-  -webkit-user-select: none;
-  user-select: none;
+	display: flex;
+	align-items: center;
+	-webkit-user-select: none;
+	user-select: none;
 }
 
 .navLogoIcon {
@@ -42,41 +54,42 @@ button {
 }
 
 .navText {
-  font-weight: bold;
-  font-size: 32px;
+	font-weight: bold;
+	font-size: 32px;
 }
 
 .navMain {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  height: 100%;
-  width: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	height: 100%;
+	width: 50%;
 	padding: 15px;
-  margin: 0 20px;
-  font-size: 20px;
-  font-weight: 600;
+	margin: 0 20px;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 .navLink {
-  display: flex;
-  align-items: center;
-  margin: 0 15px;
+	display: flex;
+	align-items: center;
+	margin: 0 15px;
 }
 
 .navIcon {
-  font-size: 30px;
+	font-size: 30px;
 }
 
-.navMain span, .navUser span {
-  display: inline-block;
-  height: 100%;
-  margin-left: 5px;
+.navMain span,
+.navUser span {
+	display: inline-block;
+	height: 100%;
+	margin-left: 5px;
 }
 
 .navUser {
-  margin: 0 20px;
-  margin-left: auto;
-  font-size: 20px;
-  font-weight: 600;
+	margin: 0 20px;
+	margin-left: auto;
+	font-size: 20px;
+	font-weight: 600;
 }
