--- a/src/index.css
+++ b/src/index.css
@@ -97,4 +97,9 @@ body {
 .lazy-load-image-background {
   height: 100%;
   width: 100%;
+  object-fit: fill;
+}
+
+.infinite-scroll-component {
+  overflow: unset !important;
 }
