--- a/src/components/SectionSlider/SectionSlider.module.css
+++ b/src/components/SectionSlider/SectionSlider.module.css
@@ -1,12 +1,12 @@
 .secContainer {
-  margin: 32px 0;
+	margin: 32px 0;
 }
 
 .sectionTitle {
 	font-size: 26px;
 	line-height: 120%;
 	color: #f5f5f5;
-  margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 
 .movieImage {
@@ -14,5 +14,23 @@
 	height: 265px;
 	object-fit: cover;
 	user-select: none;
-  border-radius: 8px;
+	border-radius: 8px;
+}
+
+.movieTitle {
+	margin-top: 6px;
+	font-size: 14px;
+	line-height: 120%;
+	color: #f5f5f5;
+	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
+	-ms-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	user-select: none;
+	-ms-user-select: none;
+}
+
+.movieTitle:hover {
+	color: #8a8ef6;
 }
