--- a/src/components/Discovery/Discovery.module.css
+++ b/src/components/Discovery/Discovery.module.css
@@ -41,6 +41,10 @@
 .postReact {
 	width: 10%;
 	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 .postVideoContainer {
@@ -56,4 +60,30 @@
 	top: 0;
 	left: 0;
 	object-fit: cover;
+}
+
+.postLikeCount {
+	width: 100%;
+	height: 100px;
+	background-color: #999;
+}
+
+.postWatchNow {
+	width: 100%;
+	height: 100px;
+	background-color: #888;
+}
+
+.postHeartIcon {
+	width: 50px;
+	height: 50px;
+	padding: 8px;
+	border-radius: 50%;
+	color: red;
+	font-size: 28px;
+	border: #999 1px solid;
+}
+
+.postOpenIcon {
+
 }
