--- a/src/components/Discovery/Discovery.module.css
+++ b/src/components/Discovery/Discovery.module.css
@@ -40,11 +40,7 @@
 
 .postReact {
 	width: 10%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+	background-color: #555;
 }
 
 .postVideoContainer {
@@ -68,6 +64,10 @@
 	background-color: #999;
 }
 
+.reactContainer {
+	margin: auto 0px;
+}
+
 .postWatchNow {
 	width: 100%;
 	height: 100px;
@@ -81,7 +81,7 @@
 	border-radius: 50%;
 	color: red;
 	font-size: 28px;
-	border: #999 1px solid;
+	border: #888 1px solid;
 }
 
 .postOpenIcon {
