--- a/src/components/Discovery/Discovery.module.css
+++ b/src/components/Discovery/Discovery.module.css
@@ -1,3 +1,7 @@
+a {
+	color: #f5f5f5;
+} 
+
 .disContainer {
 	width: 60%;
 	margin: 60px auto;
@@ -40,7 +44,7 @@
 
 .postReact {
 	width: 10%;
-	background-color: #555;
+	display: flex;
 }
 
 .postVideoContainer {
@@ -61,29 +65,30 @@
 .postLikeCount {
 	width: 100%;
 	height: 100px;
-	background-color: #999;
 }
 
 .reactContainer {
+	width: 100%;
 	margin: auto 0px;
+	display: flex;
+	flex-direction: column;
 }
 
 .postWatchNow {
 	width: 100%;
 	height: 100px;
-	background-color: #888;
+}
+
+.postHeartIcon, .postOpenIcon {
+	width: 50px;
+	height: 50px;
+	padding: 12px;
+	border-radius: 50%;
+	font-size: 28px;
+	background-color: #27282e;
 }
 
 .postHeartIcon {
-	width: 50px;
-	height: 50px;
-	padding: 8px;
-	border-radius: 50%;
-	color: red;
-	font-size: 28px;
-	border: #888 1px solid;
-}
-
-.postOpenIcon {
-
+	color: #ef4444;
+	cursor: pointer;
 }
