--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -34,7 +34,12 @@ button {
   background-image: linear-gradient( 
 180deg
 , #0f0f0ea6 0%, rgba(15, 15, 15, 0) 87% );
-  background-color: rgba(0, 0, 0, 0) !important;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.navContainerScrolled {
+	background-image: unset;
+	background-color: #111;
 }
 
 .navContainer a {
@@ -46,6 +51,7 @@ button {
 	align-items: center;
 	-webkit-user-select: none;
 	user-select: none;
+	transform: scale(0.9);
 }
 
 .navLogoIcon {
@@ -66,7 +72,7 @@ button {
 	width: 50%;
 	padding: 15px;
 	margin: 0 20px;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 600;
 }
 
