--- a/src/index.css
+++ b/src/index.css
@@ -1,100 +1,185 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
 }
 body {
-  line-height: 1;
-  color:#555;
+	line-height: 1;
+	color: #555;
 }
-ol, ul {
-  list-style: none;
+ol,
+ul {
+	list-style: none;
 }
-blockquote, q {
-  quotes: none;
+blockquote,
+q {
+	quotes: none;
 }
-blockquote:before, blockquote:after, q:before, q:after {
-  content: '';
-  content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: '';
+	content: none;
 }
 :focus {
-  outline: 0;
+	outline: 0;
 }
 ins {
-  text-decoration: none;
+	text-decoration: none;
 }
 del {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 a {
-   text-decoration:  none;
+	text-decoration: none;
 }
 
 .clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
+	content: '.';
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
 }
 
 .clearfix {
-  clear: both;
-  display: block;
+	clear: both;
+	display: block;
 }
 
 html[xmlns] .clearfix {
-  display: block;
+	display: block;
 }
 
 * html .clearfix {
-  height: 1%;
+	height: 1%;
 }
-* { 
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 /*Add your css into here*/
-.fl_left{ float: left;}
-.fl_right{ float: right;}
+.fl_left {
+	float: left;
+}
+.fl_right {
+	float: right;
+}
 
 body {
-  font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	background-color: #191a1f;
-  color: white;
+	color: white;
 }
 
 /* Custom Swiper pagination & navigation */
 .swiper-pagination-bullet-active {
-  width: 24px;
-  border-radius: 6px;
-  background-color: #f5f5f5;
-  -webkit-flex-shrink: 0;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  -webkit-box-flex: 0;
-  -webkit-flex-grow: 0;
-  -ms-flex-positive: 0;
-  flex-grow: 0;
-  margin: 0 5px;
-  opacity: 1;
+	width: 24px;
+	border-radius: 6px;
+	background-color: #f5f5f5;
+	-webkit-flex-shrink: 0;
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	-webkit-box-flex: 0;
+	-webkit-flex-grow: 0;
+	-ms-flex-positive: 0;
+	flex-grow: 0;
+	margin: 0 5px;
+	opacity: 1;
 }
 
-.swiper-button-prev, .swiper-button-next {
-  color: #f5f5f5;
+.swiper-button-prev,
+.swiper-button-next {
+	color: #f5f5f5;
 }
-
 
 .infinite-scroll-component {
-  overflow: unset !important;
+	overflow: unset !important;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #363636;
+  padding: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9e8fb2;
+  background-image: linear-gradient(315deg, #9e8fb2 0%, #a7acd9 74%);
+	border-radius: 16px;
 }
