--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ html[xmlns] .clearfix {
 body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #191a1f;
-	color: white;
+	color: #f5f5f5;
 }
 
 /* Custom Swiper pagination & navigation */
