--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -11,10 +11,16 @@ justify-content: center;
 }
 
 .expMainCategory {
+  display: flex;
   font-weight: 600;
   font-size: 16px;
   line-height: 120%;
   letter-spacing: 0.4px;
+}
+
+.cateName {
+  margin-right: 24px;
+  cursor: pointer;
 }
 
 .isCateActive {
