--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -1,28 +1,41 @@
 .expContainer {
-display: flex;
-justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .expMain {
-  width: 90%;
-  background-color: #474747;
-  height: 1500px;
-  margin-top: 72px;
+	width: 90%;
+	background-color: #474747;
+	height: 1500px;
+	margin-top: 72px;
 }
 
 .expMainCategory {
-  display: flex;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 120%;
-  letter-spacing: 0.4px;
+	display: flex;
+  height: 32px;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 120%;
+	letter-spacing: 0.2px;
 }
 
 .cateName {
-  margin-right: 24px;
-  cursor: pointer;
+	margin-right: 24px;
+	cursor: pointer;
+  position: relative;
 }
 
-.isCateActive {
-
+.isCateActive::after {
+	content: ' ';
+	width: 32px;
+	height: 4px;
+	border-radius: 4px;
+  background-color: #9e8fb2;
+  background-image: linear-gradient(315deg, #9e8fb2 0%, #a7acd9 74%);
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
 }
