--- a/src/components/SelectBox/SelectBox.module.css
+++ b/src/components/SelectBox/SelectBox.module.css
@@ -1,6 +1,6 @@
 .selectBox {
   display: flex;
-  width: 250px;
+  width: 180px;
   flex-direction: column;
 }
 
@@ -13,7 +13,6 @@
   transition: all 0.4s;
   border-radius: 8px;
   overflow: hidden;
-
   order: 1;
 }
 
@@ -32,14 +31,14 @@
   overflow-y: scroll;
 }
 
-.selectBox .optionsContainer.active + .selected::after {
-  transform: rotateX(180deg);
-  top: -6px;
-}
-
 .selectBox .optionsContainer::-webkit-scrollbar {
   width: 8px;
   background: #0d141f;
+  border-radius: 0 8px 8px 0;
+}
+
+.selectBox .optionsContainer::-webkit-scrollbar-track {
+  width: 8px;
   border-radius: 0 8px 8px 0;
 }
 
@@ -64,4 +63,15 @@
 
 .selectBox .option .radio {
   display: none;
+}
+
+.arrowDownIcon {
+  display: inline-block;
+  float: right;
+  font-size: 14px;
+  transition: 0.2s;
+}
+
+.arrowDownIcon.active {
+  transform: rotate(180deg) translateY(1px);
 }
