--- a/src/components/SelectBox/SelectBox.module.css
+++ b/src/components/SelectBox/SelectBox.module.css
@@ -13,7 +13,6 @@
   opacity: 0;
   transition: all 0.4s;
   border-radius: 8px;
-  overflow: hidden;
   order: 1;
 }
 
@@ -33,6 +32,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 2px 0;
 }
 
 .selectBox .optionsContainer.active {
