--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -5,7 +5,7 @@
 
 .expMain {
 	width: 90%;
-	background-color: #474747;
+	/* background-color: #474747; */
 	height: 1500px;
 	margin-top: 72px;
 }
@@ -44,4 +44,41 @@
 	display: flex;
 	margin: 12px 0;
 	font-size: 15px;
+}
+
+.expInfScrollContent {
+	display: flex;
+}
+
+.contentContainer {
+	width: 15%;
+	transition: 0.05s;
+}
+
+.contentContainer:hover {
+	color: #8a8ef6;
+}
+
+.contentImg {
+	display: inline-block;
+}
+
+.contentImg img {
+	max-width: 100%;
+  height: auto;
+	border-radius: 8px;
+}
+
+.contentTitle {
+	margin-top: 4px;
+}
+
+.contentTitle span {
+	font-size: 16px;
+	line-height: 120%;
+	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
+	-ms-text-overflow: ellipsis;
+	text-overflow: ellipsis;
 }
