--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -76,11 +76,12 @@
 }
 
 .contentTitle {
+	width: 100%;
 	margin-top: 4px;
 }
 
-.contentTitle span {
-	font-size: 16px;
+.contentTitle h6 {
+	font-size: 14px;
 	line-height: 120%;
 	font-weight: bold;
 	white-space: nowrap;
