--- a/src/index.css
+++ b/src/index.css
@@ -145,10 +145,14 @@ body {
 }
 
 /* Custom Swiper pagination & navigation */
+.swiper-pagination-bullet {
+	background-color: #f5f5f5;
+}
+
 .swiper-pagination-bullet-active {
 	width: 24px;
 	border-radius: 6px;
-	background-color: #f5f5f5;
+	background-color: #fff;
 	-webkit-flex-shrink: 0;
 	-ms-flex-negative: 0;
 	flex-shrink: 0;
@@ -156,7 +160,6 @@ body {
 	-webkit-flex-grow: 0;
 	-ms-flex-positive: 0;
 	flex-grow: 0;
-	margin: 0 5px;
 	opacity: 1;
 }
 
