--- a/src/pages/Movie/Movie.module.css
+++ b/src/pages/Movie/Movie.module.css
@@ -1,95 +1,38 @@
-a {
-	color: #f5f5f5;
-} 
-
-.disContainer {
-	width: 60%;
-	margin: 60px auto;
+.movieMain {
+	width: 100%;
+	height: 1200px;
+	margin-top: 64px;
 }
 
-.postContainer {
+.movieSection {
 	display: flex;
 	width: 90%;
-	margin: 40px auto;
-	transform: scale(0.9);
+	height: 538px;
+	background-color: #343641;
+	margin: 16px auto;
 }
 
-.postImageSection {
-	width: 10%;
+.videoSection {
+	width: 70%;
+	height: 90%;
+	margin: auto 0;
+	background-color: #606477;
+}
+
+.relativeSection {
+	width: 30%;
 	height: 100%;
+	background-color: #4d5475;
 }
 
-.postContentSection {
-	width: 80%;
-	height: 100%;
-	padding: 12px;
-}
-
-.postUpImage {
-	height: 60px;
-	width: 60px;
-	border-radius: 50%;
-	object-fit: cover;
-}
-
-.postUpName {
-	font-size: 20px;
-	line-height: 120%;
-	color: #f5f5f5;
-	font-weight: 600;
-}
-
-.postCaption {
-	margin: 12px 0px;
-}
-
-.postReact {
-	width: 10%;
-	display: flex;
-}
-
-.postVideoContainer {
-	height: 0;
-	position: relative;
-	padding-bottom: 100%;
-}
-
-.postVideo {
+.sameSeriesSection {
 	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	object-fit: cover;
+	background-color: #4b5170;
+	height: 50%;
 }
 
-.postLikeCount {
+.relativeSeriesSection {
 	width: 100%;
-	height: 100px;
-}
-
-.reactContainer {
-	width: 100%;
-	margin: auto 0px;
-	display: flex;
-	flex-direction: column;
-}
-
-.postWatchNow {
-	width: 100%;
-	height: 100px;
-}
-
-.postHeartIcon, .postOpenIcon {
-	width: 50px;
-	height: 50px;
-	padding: 12px;
-	border-radius: 50%;
-	font-size: 28px;
-	background-color: #27282e;
-}
-
-.postHeartIcon {
-	color: #ef4444;
-	cursor: pointer;
+	background-color: #444444;
+	height: 50%;
 }
