--- a/src/components/InSeries/InSeries.module.css
+++ b/src/components/InSeries/InSeries.module.css
@@ -1,4 +1,5 @@
 .inSeriesContainer {
+	height: 100%;
 }
 
 .inSeriesContainer > h6 {
@@ -6,7 +7,12 @@
 	font-size: 18px;
 	line-height: 120%;
 	color: #999;
-	margin-bottom: 10px;
+	margin: 10px;
+}
+
+.refMain {
+	height: 87%;
+	overflow: auto;
 }
 
 a:not(:last-child) > .movieMain {
@@ -18,9 +24,10 @@ a:not(:last-child) > .movieMain {
 }
 
 .movieMain span {
+	width: 70%;
 	font-size: 15px;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: break-word;
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 2;
