--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -1,95 +1,49 @@
-a {
-	color: #f5f5f5;
-} 
-
-.disContainer {
-	width: 60%;
-	margin: 60px auto;
-}
-
-.postContainer {
+.container {
+	height: 100vh;
 	display: flex;
-	width: 90%;
-	margin: 40px auto;
-	transform: scale(0.9);
+	justify-content: center;
+	align-items: center;
+	background-color: #20bf55;
+background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
+
 }
 
-.postImageSection {
-	width: 10%;
-	height: 100%;
+.main {
+	height: 400px;
+	width: 350px;
+	background-color: rgb(43, 42, 42);
+	text-align: center;
+	border-radius: 12px;
 }
 
-.postContentSection {
-	width: 80%;
-	height: 100%;
-	padding: 12px;
+.main span {
+	margin: 35px auto;
+	color: #7577d5;
+	font-size: 24px;
 }
 
-.postUpImage {
-	height: 60px;
-	width: 60px;
-	border-radius: 50%;
-	object-fit: cover;
+span {
+  position: relative;
+  font-family: "Avenir Next", sans-serif;
+  font-weight: 900;
+  font-size: 64px;
+  text-transform: uppercase;
+  font-style: italic;
+  letter-spacing: 0.05em;
+  display: inline-block;
 }
 
-.postUpName {
-	font-size: 20px;
-	line-height: 120%;
-	color: #f5f5f5;
-	font-weight: 600;
+span:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: attr(filter-content);
+
+  filter: url(#motion-blur-filter);
 }
 
-.postCaption {
-	margin: 12px 0px;
-}
+/* We hide the SVG filter element from the DOM as it would take up some space */
 
-.postReact {
-	width: 10%;
-	display: flex;
-}
-
-.postVideoContainer {
-	height: 0;
-	position: relative;
-	padding-bottom: 100%;
-}
-
-.postVideo {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	object-fit: cover;
-}
-
-.postLikeCount {
-	width: 100%;
-	height: 100px;
-}
-
-.reactContainer {
-	width: 100%;
-	margin: auto 0px;
-	display: flex;
-	flex-direction: column;
-}
-
-.postWatchNow {
-	width: 100%;
-	height: 100px;
-}
-
-.postHeartIcon, .postOpenIcon {
-	width: 50px;
-	height: 50px;
-	padding: 12px;
-	border-radius: 50%;
-	font-size: 28px;
-	background-color: #27282e;
-}
-
-.postHeartIcon {
-	color: #ef4444;
-	cursor: pointer;
+svg {
+  display: none;
 }
